Fixed issues with features alignment

--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -303,7 +303,7 @@ ul:not(.browser-default) {
     }
 
     html {
-        font-size: 2rem;
+        font-size: 30px;
     }
 
     .hidded-parallax{
